--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,7 @@ set -g status-left-length 20
 set -g status-right 20
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
+set -g pane-active-border-style "bg=default fg=magenta"
 set -g clock-mode-colour colour39
 set -g clock-mode-style 24
 
