Disable right-click menu in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,9 @@ set -g mouse on
 bind "C-d" detach
 bind "C-t" last-window
 
+# Disable right-click menu in tmux 3.0. It's cool but it interferes.
+unbind -n MouseDown3Pane
+
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 # bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 # bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
