--- a/.curlrc
+++ b/.curlrc
@@ -1,3 +1,4 @@
+silent
 #user-agent = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/103.0.5060.114 Safari/537.36"
 referer = ";auto"
 connect-timeout = 10
