--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,9 +65,11 @@ set -g status-left-length 20
 set -g status-right 20
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
-set -g pane-active-border-style "bg=default fg=magenta"
 set -g clock-mode-colour colour39
 set -g clock-mode-style 24
+
+set -g pane-border-style "bg=default fg=colour235"          # Inactive: slightly lighter than bg
+set -g pane-active-border-style "bg=default fg=colour245"   # Active: much brighter gray
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
