Add pane border status display with index and title at the top of each pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,8 @@ set -g clock-mode-style 24
 
 set -g pane-border-style "bg=default fg=colour235"          # Inactive: slightly lighter than bg
 set -g pane-active-border-style "bg=default fg=colour245"   # Active: much brighter gray
+set -g pane-border-status top
+set -g pane-border-format "⋅#{pane_index}⋅ #{pane_title}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
