Update tmux pane border styles with explicit background colors and fix color typo

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,9 +67,8 @@ set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour39
 set -g clock-mode-style 24
-
-set -g pane-border-style "bg=default fg=colour235"          # Inactive: slightly lighter than bg
-set -g pane-active-border-style "bg=default fg=colour245"   # Active: much brighter gray
+set -g pane-border-style "bg=colour233,fg=color240"
+set -g pane-active-border-style "bg=colour235,fg=color242"
 set -g pane-border-status top
 set -g pane-border-format "⋅#{pane_index}⋅ #{pane_title}"
 
