Disable tmux-yank plugin in tmux configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,7 +75,7 @@ set -g pane-border-format "⋅#{pane_index}⋅ #{pane_title}"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @continuum-restore 'on'
