Add keybind for quick terminal in Ghostty

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,6 +9,8 @@ font-family = Iosevka Term Medium
 font-style-bold = false
 font-size = 16
 bold-color = bright
+keybind = global:ctrl+backquote=toggle_quick_terminal
 
 # https://github.com/ghostty-org/ghostty/discussions/2812
 shell-integration-features = no-cursor
+
