Remove glow pagination. Tweak ask command and Ghostty config.

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -16,6 +16,8 @@ quick-terminal-size = 60%
 
 initial-window = false
 
+working-directory = home
+
 # https://github.com/ghostty-org/ghostty/discussions/2812
 # Also fix TERM when using SSH
 shell-integration-features = no-cursor, ssh-env
