--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,3 +90,7 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
+# Run any local configs
+if-shell "[ -f ~/.tmux.local.conf ]" "source-file ~/.tmux.local.conf"
+
