--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ set -g clock-mode-style 24
 set -g pane-border-style "bg=colour233,fg=color240"
 set -g pane-active-border-style "bg=colour235,fg=color242"
 set -g pane-border-status top
-set -g pane-border-format "⋅#{pane_index}⋅ #{pane_title}"
+set -g pane-border-format "〈#{pane_index}〉#{b:pane_current_path}: #{pane_title}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
